--- a/src/app/azeris/azeris.component.html
+++ b/src/app/azeris/azeris.component.html
@@ -1,5 +1,3 @@
-<div class="main-div">
-  <div [ngStyle]="setHeaderStyle()">
-    {{kirisame.tipus.kanji}} {{kirisame.japanNev}} // {{kirisame.magyarNev}}
-  </div>
-</div>
+<!--<app-classic [jutsu]="kirisame"></app-classic>-->
+
+<app-glow [jutsu]="kirisame"></app-glow>
